<resources>
    <string name="app_name">Vibrana</string>

    <!-- Strings for home -->
    <string name="HomeTxtWelcome">Welcome on</string>
    <string name="HomeBtnGuitar">To tune a guitar</string>
    <string name="HomeBtnPiano">To play piano</string>
    <string name="HomeBtnRecord">To record audio</string>

    <!-- Strings for toolbar -->
    <string name="content_music">Music</string>
    <string name="content_save">Save</string>
    <string name="content_home">Home</string>

    <!-- Strings for record activity -->
    <string name="record_name">Record Audio</string>
    <string name="hint_title_record">Record name here…</string>
    <string name="record_chronometer">00\'00</string>

    <!-- Strings for audio saves -->
    <string name="delete">Delete</string>
    <string name="play_pause">Play/Pause</string>
    <string name="title_my_recordings">My recordings</string>
    <string name="title_name_example">Title</string>

    <!-- Strings for piano -->
    <string name="piano_title">PLAY PIANO</string>

    <!-- Strings for Tune Guitar -->
    <string name="tune_guitar_title">Tune Guitar</string>
    <string name="tune_guitar_manual">Manual</string>
    <string name="tune_guitar_auto">Auto</string>
    <string name="tune_guitar_plus_or_minus">+</string>
    <string name="tune_guitar_hz">30Hz</string>
    <string name="tune_guitar_note_e_high">E</string>
    <string name="tune_guitar_note_b">B</string>
    <string name="tune_guitar_note_g">G</string>
    <string name="tune_guitar_note_d">D</string>
    <string name="tune_guitar_note_a">A</string>
    <string name="tune_guitar_note_e_low">E</string>

</resources>