<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TOOLBAR -->
    <include
        android:id="@+id/includeToolbar"
        layout="@layout/vibrana_tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TITRE -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeTxtWelcome"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <!-- VIBRANA -->
    <TextView
        android:id="@+id/titleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="#5A9CF3"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

    <!-- Bouton guitare -->
    <Button
        android:id="@+id/btnGuitar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/HomeBtnGuitar"
        android:backgroundTint="#A7E6A9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/titleApp"
        app:layout_constraintBottom_toTopOf="@+id/btnPiano"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"/>

    <!-- Bouton piano -->
    <Button
        android:id="@+id/btnPiano"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/HomeBtnPiano"
        android:backgroundTint="#B89BE4"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnGuitar"
        app:layout_constraintBottom_toTopOf="@+id/btnRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bouton record audio -->
    <Button
        android:id="@+id/btnRecord"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/HomeBtnRecord"
        android:backgroundTint="#E69B9F"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnPiano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>