<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/txtTitle"
            android:text="@string/title_name_example"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/btnDelete"
            android:src="@drawable/ic_delete_red"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnPlay"
            android:src="@drawable/ic_play"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:contentDescription="@string/play_pause" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>