<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#8EC3E6"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/content_home"
                android:padding="0dp"
                android:src="@drawable/ic_home" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnMusic"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/content_music"
                android:padding="0dp"
                android:src="@drawable/ic_music" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnSave"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/content_save"
                android:padding="0dp"
                android:src="@drawable/ic_save" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

</androidx.constraintlayout.widget.ConstraintLayout>